--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expensify</title>
-    <link rel="icon" type="image/png" href="./Img/Fav.png" />
-    <link rel="stylesheet" type="text/css" href="dist/styles.css" />
+    <link rel="icon" type="image/png" href="/Img/Fav.png" />
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
   </head>
   <body>
     <div id="app"></div>
